--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,22 @@
-<p>login works!</p>
-<h1>Holaaa</h1>
-<h2>ya inicia sesión</h2>
-<input type="button" value="Iniciar" routerLink="/panel">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <title>Digital Love</title>
+</head>
+<body>
+    <form action="">
+        <label for="usuario">Usuario:</label>
+        <input type="text" id="usuario" name="usuario">
+
+        <label for="contrasena">Contraseña:</label>
+        <input type="password" id="contrasena" name="contrasena">
+
+        <input type="button" value="Iniciar" routerLink="/panel">
+    </form>
+</body>
+</html>
