--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+  html{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #7D53B5;
+  }
