cambios en style.css y creacion de componente

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,29 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./login.component.css">
     <title>Digital Love</title>
 </head>
 <body>
     <section class="login">
         
-        <img src="../../assets/love3.png" alt="Logo Digital Love">
+        <img id="logologin" src="../../assets/love3.png" alt="Logo Digital Love">
             
         <div>
-            <form action="">
-                <input type="text" id="usuario" name="usuario" placeholder="Usuario">
+            <form formGroup="loginForm" (ngSubmit)="onSubmit()" action="/panel" id="form-isesion" name="formulario">
+                <input type="text" formControlName="usuario" id="usuario" name="usuario" placeholder="Usuario" required>
                 <br>
                 
-                <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña">
+                <input type="password" formControlName="contrasena" id="contrasena" name="contrasena" placeholder="Contraseña" required>
                 <br>
-                
-                <button type="submit" routerLink="/panel">Iniciar</button>
+
+                <input type="submit" id="btn" name="btn" value="Ingresar" routerLink="/tarea" onclick="validar()">
             </form>
         </div>
 
     </section>
     
 </body>
+<script src="/src/app/login/login.component.ts"></script>
+
+<script>
+    function validar(){
+      var formulario = document.getElementsByName('formulario')[0],
+          elementos = formulario.elements,
+          boton = document.getElementById('btn');
+
+      var validarUsuario = function(e){
+        if(formulario.usuario.value == 0){
+          alert("Completa los campos");
+          e.preventDefault();
+        }
+      };
+
+      var validar = function(e){
+        validarUsuario(e);
+      };
+
+      formulario.addEventListener("submit",validar);
+    }    
+</script>
+
 </html>
