--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,11 +1,11 @@
   body{
     height: 100vh;
     width: 100%;
-    font-family: "Source Sans 3", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #7D53B5;
   }
 
   .login{
@@ -19,7 +19,7 @@
     width: 30%;
   }
 
-  img{
+  #logologin{
     border-radius: 16px;
     height: 15rem;
     margin: 3rem;
@@ -32,7 +32,7 @@
     margin: 1rem 0;
   }
 
-  button{
+  #btn{
     display: flex;
     justify-content: center;
     /* background: #E4FE45; */
@@ -43,7 +43,7 @@
     padding: 0.5rem  2rem;
   }
 
-  button:hover{
+  #btn:hover{
     transform: scale(1.2);
     background: #E4FE45;
   }
@@ -61,7 +61,7 @@
       padding: 0.5rem  1.5rem;
     }
   
-    button{
+    #btn{
       padding: 0.5rem  2rem;
       background: #E4FE45;
     }
