cambios en navbar

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,2 +1,19 @@
-<app-nav></app-nav>
-<p>main works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <app-nav></app-nav>
+    <section  class="contenedor">
+        <h1>main works!</h1>
+        <h2>info</h2>
+        <h3>info</h3>
+        <h4>info</h4>
+    </section>
+    
+</body>
+</html>
