--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -9,12 +9,16 @@ nav{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    position: fixed;
     line-height: 3rem; 
     color: #000;
+    width: 130px;
+    height: 100vh;
   }
 
 #logo{
-    height: 2.5rem;
+    height: 3rem;
 }
 
 .checkBtn{
@@ -35,16 +39,22 @@ nav{
   
   .right ul{
     display: flex;
+    flex-direction: column;
     list-style: none;
   }
   
   .right ul li a{
+    display: block;
     padding: 10px 20px;
     font-size: 1.2rem;
     color: rgb(0, 0, 0);
     cursor: pointer;
     text-decoration: none;
     transition: all 1s;
+  }
+
+  #icon{
+    color: #000;
   }
   
   .right ul li a:hover{
@@ -53,7 +63,7 @@ nav{
     color: rgb(22, 7,36);
   }
   
-  @media screen and (max-width:700px){
+  /* @media screen and (max-width:700px){
     .list{
       width: 100%;
       height: 100vh;
@@ -75,4 +85,4 @@ nav{
     #check:checked~ul{
       left: 0%;
     }
-  }
+  } */
