--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,7 +9,7 @@
 <body>
     <app-nav></app-nav>
     <section  class="contenedor">
-        <h1>main works!</h1>
+        <h1>Digital Love</h1>
         <h2>info</h2>
         <h3>info</h3>
         <h4>info</h4>
