--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>panel</title>
 </head>
 
 <body>
     <app-nav></app-nav>
-    <section  class="contenedor">
-        <h1>Digital Love</h1>
-        <h2>info</h2>
-        <h3>info</h3>
-        <h4>info</h4>
+    
+    <section  class="seccion">
+        <h1 id="titulo">Resumen</h1>
+        <br><br>
+        <div class="contenedor">
+            <div class="caja">
+                <h2>info</h2>
+            </div>
+            <br><br>
+            <div class="caja">
+                <h2>info</h2>
+            </div>
+            
+            
+        </div>        
     </section>
+
+
     
 </body>
 </html>
