--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,18 +9,35 @@
 <body>
     <app-nav></app-nav>
     
-    <section  class="seccion">
+    <section  class="seccion-principal">
         <h1 id="titulo">Resumen</h1>
         <br><br>
         <div class="contenedor">
-            <div class="caja">
-                <h2>info</h2>
-            </div>
-            <br><br>
-            <div class="caja">
-                <h2>info</h2>
+            <div class="caja-superior">
+                <div class="caja">
+                    <h2>info1</h2>
+                </div>
+                
+                <div class="caja" id="extra-larga">
+                    <h2>info2</h2>
+                </div>
+                
+                <div class="caja">
+                    <h2>info3</h2>
+                </div>
             </div>
             
+            <br><br>
+
+            <div class="caja-inferior">
+                <div class="caja">
+                    <h2>info4</h2>
+                </div>
+                <br><br>
+                <div class="caja" id="larga">
+                    <h2>info5</h2>
+                </div>
+            </div>
             
         </div>        
     </section>
