update 16 de abril

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -30,7 +30,7 @@
             <br><br>
 
             <div class="caja-inferior">
-                <div class="caja">
+                <div class="caja" id="larga">
                     <h2>info4</h2>
                 </div>
                 <br><br>
