--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -31,12 +31,9 @@ body{
     display: flex;
     columns: 3;
     column-gap: 20px;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
     border-radius: 1rem;
     cursor: pointer;
-    
     background-color: #dfdfdf;
 }
 
@@ -58,18 +55,14 @@ body{
 }
 
 #larga{
-    width: 18rem;
+    width: 30rem;
 }
 
 .caja-inferior{
     display: flex;
-    
-    justify-content: center;
-    align-items: center;
+    columns: 3;
+    column-gap: 30px;
     overflow: hidden;
     border-radius: 1rem;
     cursor: pointer;
-    height: 12rem;
-    width: 12rem;
-    background-color: white;
 }
