avance en usuarios 22 de abril

--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,1 +1,41 @@
-<p>usuarios works!</p>
+<body>
+  <app-nav></app-nav>
+  
+  <section class="seccion-principal">
+    <h2 class="titulo">Usuarios</h2>
+    <br><br>
+    <div class="contenedor">
+      <!-- <table  *ngIf="Lista_Asistencia" class="table" style="margin-top: 20px"> -->
+      <table>
+        <thead class=" encabezado">
+          <tr>
+            <!-- <th>Indice</th> -->
+            <th>Nombre</th>
+            <th>Primer Apellido</th>
+            <th>Segundo Apellido</th>
+            <th>Email</th>
+            <th>Contraseña</th>
+          </tr>
+        </thead>
+        
+        <tbody>
+          <!-- <ng-container
+            *ngFor="let alumno_recibido of listaAsistencia; let i = index"> -->
+            <tr>
+              <!-- <td>{{ i + 1 }}</td> -->
+            <!--  <td>{{ alumno_recibido.Matricula }}</td>
+              <td>{{ alumno_recibido.Nombre }}</td>
+              <td>{{ alumno_recibido.Carrera }}</td>
+              <td>{{ alumno_recibido.Status }}</td> -->
+              <td>user 1</td>
+              <td>apellido1</td>
+              <td>apellido2</td>
+              <td>user@gmail.com</td>
+              <td>********</td>
+            </tr>
+          <!-- </ng-container> -->
+        </tbody>
+      </table>
+    </div> 
+  </section>
+</body>
