front de usuarios listo

--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -4,38 +4,153 @@
   <section class="seccion-principal">
     <h2 class="titulo">Usuarios</h2>
     <br><br>
-    <div class="contenedor">
-      <!-- <table  *ngIf="Lista_Asistencia" class="table" style="margin-top: 20px"> -->
-      <table>
-        <thead class=" encabezado">
-          <tr>
-            <!-- <th>Indice</th> -->
-            <th>Nombre</th>
-            <th>Primer Apellido</th>
-            <th>Segundo Apellido</th>
-            <th>Email</th>
-            <th>Contraseña</th>
-          </tr>
-        </thead>
-        
-        <tbody>
-          <!-- <ng-container
-            *ngFor="let alumno_recibido of listaAsistencia; let i = index"> -->
+    <div class="contenedor1">
+      <div class="contenedor2">
+        <!-- <table  *ngIf="Lista_Asistencia" class="table" style="margin-top: 20px"> -->
+        <table>
+          <thead class=" encabezado">
             <tr>
-              <!-- <td>{{ i + 1 }}</td> -->
-            <!--  <td>{{ alumno_recibido.Matricula }}</td>
-              <td>{{ alumno_recibido.Nombre }}</td>
-              <td>{{ alumno_recibido.Carrera }}</td>
-              <td>{{ alumno_recibido.Status }}</td> -->
-              <td>user 1</td>
-              <td>apellido1</td>
-              <td>apellido2</td>
-              <td>user@gmail.com</td>
-              <td>********</td>
+              <!-- <th>Indice</th> -->
+              <th>Nombre</th>
+              <th>Primer Apellido</th>
+              <th>Segundo Apellido</th>
+              <th>Email</th>
+              <th>Contraseña</th>
             </tr>
-          <!-- </ng-container> -->
-        </tbody>
-      </table>
-    </div> 
+          </thead>
+          
+          <tbody>
+            <!-- <ng-container
+              *ngFor="let alumno_recibido of listaAsistencia; let i = index"> -->
+              <tr>
+                <!-- <td>{{ i + 1 }}</td> -->
+              <!--  <td>{{ alumno_recibido.Matricula }}</td>
+                <td>{{ alumno_recibido.Nombre }}</td>
+                <td>{{ alumno_recibido.Carrera }}</td>
+                <td>{{ alumno_recibido.Status }}</td> -->
+                <td>user 1</td>
+                <td>apellido1</td>
+                <td>apellido2</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 2</td>
+                <td>apellido2</td>
+                <td>apellido2</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 3</td>
+                <td>apellido3</td>
+                <td>apellido3</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 4</td>
+                <td>apellido4</td>
+                <td>apellido4</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 4</td>
+                <td>apellido4</td>
+                <td>apellido4</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 4</td>
+                <td>apellido4</td>
+                <td>apellido4</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user 4</td>
+                <td>apellido4</td>
+                <td>apellido4</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+              <tr>
+                <td>user</td>
+                <td>apellido</td>
+                <td>apellido</td>
+                <td>user@gmail.com</td>
+                <td>********</td>
+              </tr>
+            <!-- </ng-container> -->
+          </tbody>
+
+        </table>
+      </div> 
+    </div>
   </section>
 </body>
