--- a/src/app/usuarios/usuarios.component.css
+++ b/src/app/usuarios/usuarios.component.css
@@ -15,22 +15,41 @@ body{
     padding-top: 3rem;
 }
 
-.contenedor{
+.contenedor1{
     height: 28rem;
-    width: 84%;
+    width: 85%;
     padding: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
     border-radius: 2rem;
     background-color: #dfdfdf;
 }
 
+.contenedor2{
+    height: 28rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative; 
+    overflow-y: scroll;
+}
+
 table{
     background-color: white;
+    border-radius: 1rem;
     width: 100%;
-    height: 28rem;
-    border-radius: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    position: relative;
+    border-collapse: collapse;
+    border-radius: 1rem;
+}
+
+td {
+    padding: 1rem;
+    padding-left: 5rem;
+}
+
+th{
+    position: sticky;
+    top: 0;
+    border-radius: 1rem;
+    background-color: #ffffff;
 }
