avance en módulo perfil

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,1 +1,13 @@
-<p>perfil works!</p>
+<body>
+    <app-nav></app-nav>
+    
+    <section class="seccion-principal">
+      <h2 class="titulo">Perfil</h2>
+      <br><br>
+      <div class="contenedor1">
+        <div class="contenedor2">
+          
+        </div> 
+      </div>
+    </section>
+  </body>
