--- a/src/app/notificacioes/notificacioes.component.html
+++ b/src/app/notificacioes/notificacioes.component.html
@@ -1,1 +1,24 @@
-<p>notificacioes works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notificaciones</title>
+</head>
+
+<body>
+    <app-nav></app-nav>
+
+    <section class="seccion-principal">
+        <h1 id="titulo">Notificaciones</h1>
+        <div class="contenedor">
+            <div class="caja">
+
+            </div>
+            <div class="caja">
+               
+            </div>
+        </div>
+    </section>
+</body>
+</html>
