--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -21,13 +21,17 @@ body{
     padding: 2rem;
     border-radius: 2rem;
     background-color: #dfdfdf;
+    columns: 2;
 }
 
-.contenedor2{
-    height: 28rem;
-    width: 100%;
+/* .left{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    position: relative; 
+    
 }
+
+.right{
+    display: flex;
+    flex-direction: column;
+    
+} */
