--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -5,9 +5,20 @@
       <h2 class="titulo">Perfil</h2>
       <br><br>
       <div class="contenedor1">
-        <div class="contenedor2">
-          
+        <div class="left">
+          <img src="#" alt="Foto de perfil" class="fotoPerfil">
         </div> 
+        <br>
+        <div class="right">
+          <h2>Usuario</h2>
+          <p>____</p>
+          <br>
+          <h2>Email</h2>
+          <p>____</p>
+          <h2>Contraseña</h2>
+          <p>____</p>
+          <p>Cambiar contraseña</p>
+        </div>
       </div>
     </section>
   </body>
