pull de notificaciones

--- a/src/app/notificacioes/notificacioes.component.css
+++ b/src/app/notificacioes/notificacioes.component.css
@@ -35,6 +35,6 @@ body {
   cursor: pointer;
   background-color: white;
   height: 5rem;
-  width: 75rem;
+  width: 95%;
   margin: 1rem; /* Espaciado entre las cajas */
 }
