--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,68 +1,87 @@
-body{
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
-  border-right: 5rem;
-  padding-right: 2rem;
 }
 
-#titulo{
-  color: #7D53B5;
-  font-size: 36px;
+.screen-container {
+  padding-right: 16rem;
 }
 
-.seccion-principal {
+#titulo {
+  color: #7d53b5;
+  font-size: 30px;
+}
+
+.seccion-mapa {
   position: relative;
-  left: 150px;
-  padding-top: 3rem;
+  left: 8rem;
+  padding-top: 2.5rem;
 }
 
-.contenedor{
-  height: 27rem;
-  width: 84%;
+.container-items {
+  height: 29rem;
+  width: 100%;
   padding: 2rem;
   padding-left: 4rem;
   padding-right: 2rem;
   border-radius: 2rem;
   background-color: #dfdfdf;
-  /* columns: 3;
-  column-gap: 20px; */
+  display: flex;
+  flex-direction: column;
 }
 
-.caja-superior{
+.map {
   display: flex;
   columns: 3;
   column-gap: 20px;
   overflow: hidden;
   border-radius: 1rem;
   cursor: pointer;
-  background-color: #dfdfdf;
+  flex: 1;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #ffffff;
 }
 
-.caja{
+.small-card {
+  background-color: #f9f9f9;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex: 1;
+}
+
+.medium-card {
+  background-color: #f9f9f9;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex: 1;
+}
+
+.column-cards {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 1rem;
-  cursor: pointer;
-  background-color: white;
-  height: 12rem;
-  width: 12rem;
+  gap: 20px;
+  flex-basis: 30%;
 }
 
-#extra-larga{
-  width: 30rem;
-}
-
-#larga{
-  width: 30rem;
-}
-
-.caja-inferior{
+.row-cards {
   display: flex;
-  columns: 3;
-  column-gap: 30px;
-  overflow: hidden;
-  border-radius: 1rem;
-  cursor: pointer;
+  flex-direction: row;
+  gap: 20px;
+  flex-basis: 100%;
+}
+
+.top-items {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.bottom-items {
+  display: flex;
+  gap: 20px;
 }
