--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,79 +1,5 @@
-body {
-  overflow-x: hidden;
-  padding-right: 2rem;
-}
-
-#titulo {
-  color: #7d53b5;
-  font-size: 36px;
-}
-
-.seccion-mapa {
-  position: relative;
-  left: 150px;
-  padding-top: 3rem;
-}
-
-.container-items {
-  height: 27rem;
-  width: 84%;
-  margin-top: 3%;
-  padding: 2rem;
-  padding-left: 4rem;
-  padding-right: 2rem;
-  border-radius: 2rem;
-  background-color: #dfdfdf;
-}
-
-.map {
-  display: flex;
-  overflow: hidden;
-  border-radius: 1rem;
-  cursor: pointer;
-  background-color: #dfdfdf;
-  flex: 1;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 20px;
-}
-
-.small-card {
-  background-color: #f9f9f9;
-  padding: 10px;
-  border-radius: 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex: 1;
-}
-
-.medium-card {
-  background-color: #f9f9f9;
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex: 1;
-}
-
-.column-cards {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  flex-basis: 30%;
-}
-
-.row-cards {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  flex-basis: 100%;
-}
-
-.top-items {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 15px;
-}
-
-.bottom-items {
-  display: flex;
-  gap: 20px;
-}
+div {
+    width: 54vw;
+    height: 24.5vw;
+  }
+  
