--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,31 +1,23 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
   overflow-x: hidden;
-}
-
-.screen-container {
-  padding-right: 16rem;
+  padding-right: 2rem;
 }
 
 #titulo {
   color: #7d53b5;
-  font-size: 30px;
+  font-size: 36px;
 }
 
 .seccion-mapa {
   position: relative;
-  left: 8rem;
-  padding-top: 2.5rem;
+  left: 150px;
+  padding-top: 3rem;
 }
 
 .container-items {
-  height: 29rem;
-  width: 100%;
+  height: 28.5rem;
+  width: 85%;
   padding: 2rem;
-  padding-left: 4rem;
-  padding-right: 2rem;
   border-radius: 2rem;
   background-color: #dfdfdf;
   display: flex;
@@ -34,15 +26,12 @@ body {
 
 .map {
   display: flex;
-  columns: 3;
-  column-gap: 20px;
   overflow: hidden;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   cursor: pointer;
-  flex: 1;
-  border-radius: 5px;
-  padding: 10px;
+  padding: 0.2rem;
   background-color: #ffffff;
+
 }
 
 .small-card {
@@ -66,13 +55,15 @@ body {
   flex-direction: column;
   gap: 20px;
   flex-basis: 30%;
+  padding-left: 0.5rem;
 }
 
 .row-cards {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 30px;
   flex-basis: 100%;
+  padding-top: 1rem;
 }
 
 .top-items {
@@ -83,5 +74,5 @@ body {
 
 .bottom-items {
   display: flex;
-  gap: 20px;
+  gap: 30px;
 }
