--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -2,7 +2,7 @@
     <app-nav></app-nav>
     
     <section class="seccion-principal">
-      <h2 class="titulo">Perfil</h2>
+      <h2 class="titulo" id="titulo">Perfil</h2>
       <br><br>
       <div class="contenedor1">
         <div class="left">
