--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -2,7 +2,7 @@
   <app-nav></app-nav>
   
   <section class="seccion-principal">
-    <h2 class="titulo">Usuarios</h2>
+    <h2 class="titulo" id="titulo">Usuarios</h2>
     <br><br>
     <div class="contenedor1">
       <div class="contenedor2">
