--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -6,18 +6,16 @@
       <br><br>
       <div class="contenedor1">
         <div class="left">
-          <img src="#" alt="Foto de perfil" class="fotoPerfil">
+          
         </div> 
         <br>
         <div class="right">
           <h2>Usuario</h2>
           <p>____</p>
           <br>
-          <h2>Email</h2>
-          <p>____</p>
           <h2>Contraseña</h2>
-          <p>____</p>
-          <p>Cambiar contraseña</p>
+          <p>********</p>
+          <button>Cambiar contraseña</button>
         </div>
       </div>
     </section>
