--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -24,7 +24,7 @@
               <tr >
                 <td>{{user.id}}</td>
                 <td>{{user.edad}}</td>
-                <td>{{user.genero}}</td>
+                <td>{{user.sexo}}</td>
                 <td>{{user.usuario}}</td>
                 <td>{{user.correo}}</td>
                 <td>{{user.fechaRegistro}}</td>
