--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
         <img id="logologin" src="../../assets/love3.png" alt="Logo Digital Love">
             
         <div>
-            <form formGroup="loginForm" (ngSubmit)="onSubmit()" action="/panel" name="loginForm" id="loginForm">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" action="/panel" name="loginForm" id="loginForm">
                 <input type="text" formControlName="usuario" id="usuario" name="usuario" placeholder="Usuario" required>
                 <br>
                 
-                <input type="password" formControlName="contrasena" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+                <input type="password" formControlName="password" id="password" name="password" placeholder="Contraseña" required>
                 <br>
 
                 <button type="submit" id="btn" name="btn">
