--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,21 +1,22 @@
+<head>
+  <script src="https://kit.fontawesome.com/186ffad0a2.js" crossorigin="anonymous"></script>
+</head>
 <body>
     <app-nav></app-nav>
     
     <section class="seccion-principal">
       <h2 class="titulo" id="titulo">Perfil</h2>
-      <br><br>
+      <br>
       <div class="contenedor1">
         <div class="left">
-          
-        </div> 
-        <br>
+          <img src="../../assets/user.png" alt="User" id="icono">
+        </div>
         <div class="right">
           <h2>Usuario</h2>
-          <p>____</p>
-          <br>
+          <p *ngIf="usuario">{{usuario}}</p>
           <h2>Contraseña</h2>
-          <p>********</p>
-          <button>Cambiar contraseña</button>
+          <p *ngIf="password">{{password}}</p>
+          <!-- <button>Cambiar contraseña</button> -->
         </div>
       </div>
     </section>
