--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -11,7 +11,10 @@ body {
 
 #titulo {
   color: #7d53b5;
-  font-size: 30px;
+  font-size: 36px;
+  margin-left: 1.5rem; /* Ajusta la posición del título */
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 .seccion-mapa {
@@ -21,10 +24,10 @@ body {
 }
 
 .container-items {
-  height: 29rem;
-  width: 100%;
+  height: 33rem;
+  width: 103%;
   padding: 2rem;
-  padding-left: 4rem;
+  padding-left: 2rem;
   padding-right: 2rem;
   border-radius: 2rem;
   background-color: #dfdfdf;
@@ -34,20 +37,23 @@ body {
 
 .map {
   display: flex;
-  columns: 3;
-  column-gap: 20px;
   overflow: hidden;
-  border-radius: 1rem;
   cursor: pointer;
-  flex: 1;
-  border-radius: 5px;
-  padding: 10px;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
+  border-radius: 15px;
+  padding-right: 5rem;
+  padding-left: 5rem;
+  flex-grow: 1;
+  border: 15px;
+  min-height: 450px;
 }
+
 
 .small-card {
   background-color: #f9f9f9;
-  padding: 10px;
+  padding: 16px;
   border-radius: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex: 1;
