--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -22,7 +22,7 @@
                             <p>100</p>
                         </div>
                         <div class="medium-card">
-                            <h4>País con más usuarios</h4>
+                            <h4>Estado con más usuarios</h4>
                             <p>100</p>
                         </div>
                         <div class="medium-card">
@@ -35,17 +35,17 @@
                 <div class="bottom-items">
                     <div class="row-cards">
                         <div class="small-card">
-                            <h4>Reporte de error</h4>
+                            <h4>Total de errores</h4>
                             <p>14</p>
                         </div>
                         <div class="small-card">
                             <h4>Estado con más reportes</h4>
                             <p>Veracruz</p>
                         </div>
-                        <div class="small-card">
+                        <!-- <div class="small-card">
                             <h4>Ciudad con más reportes</h4>
                             <p>Córdoba</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
