--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/186ffad0a2.js" crossorigin="anonymous"></script>
     <title>nav</title>
-</head>
-<body>
+</head> 
+<body>  -->
     <nav>
         <div class="left">
             <img src="../../assets/sidevar.png" alt="Logo Digital Love" id="logo">
@@ -46,5 +46,6 @@
             </ul>
         </div>
     </nav>
-</body>
+<!-- </body>
 </html>
+ -->
