--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -22,7 +22,7 @@
                             <p>100</p>
                         </div>
                         <div class="medium-card">
-                            <h4>País con más usuarios</h4>
+                            <h4>Estado con más usuarios</h4>
                             <p>100</p>
                         </div>
                         <div class="medium-card">
