--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -12,8 +12,8 @@ body {
 #titulo {
   color: #7d53b5;
   font-size: 36px;
-  margin-left: 1.5rem; /* Ajusta la posición del título */
-  margin-top: 1rem;
+  margin-left: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 2rem;
 }
 
@@ -24,9 +24,10 @@ body {
 }
 
 .container-items {
-  height: 33rem;
+  height: 30rem;
   width: 103%;
-  padding: 2rem;
+  padding: 9rem;
+  padding-top: 2rem;
   padding-left: 2rem;
   padding-right: 2rem;
   border-radius: 2rem;
@@ -59,6 +60,7 @@ body {
   flex: 1;
 }
 
+
 .medium-card {
   background-color: #f9f9f9;
   padding: 30px;
@@ -67,6 +69,16 @@ body {
   flex: 1;
 }
 
+.small-card h4, .medium-card h4 {
+  color: #7D53B5;
+  font-size: 25px;
+
+}
+
+.small-card p, .medium-card p {
+  color: #35BF64;
+  font-size: 30px;
+}
 .column-cards {
   display: flex;
   flex-direction: column;
