--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -19,32 +19,32 @@
                     <aside class="column-cards">
                         <div class="medium-card">
                             <h4>Total de usuarios</h4>
-                            <p>100</p>
+                            <p>{{ totalUsuarios }}</p>
                         </div>
                         <div class="medium-card">
                             <h4>Estado con más usuarios</h4>
-                            <p>100</p>
+                            <p>{{ estadoConMasUsuarios }}</p>
                         </div>
                         <div class="medium-card">
                             <h4>Total de usuarios activos</h4>
-                            <p>100</p>
-                        </div>
-                    </aside>
-                </div>
-                <div class="bottom-items">
-                    <div class="row-cards">
-                        <div class="small-card">
-                            <h4>Reporte de error</h4>
-                            <p>14</p>
-                        </div>
-                        <div class="small-card">
-                            <h4>Estado con más reportes</h4>
-                            <p>Veracruz</p>
+                            <p>{{ usuariosActivos }}</p>
+                          </div>
+                        </aside>
+                    </div>
+                    <div class="bottom-items">
+                        <div class="row-cards">
+                            <div class="small-card">
+                                <h4>Total de reportes</h4>
+                                <p>{{ totalReportes }}</p>
+                            </div>
+                            <div class="small-card">
+                                <h4>Estado con más reportes</h4>
+                                <p>{{ estadoConMasReportes }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </div>
-</body>
-</html>
+            </section>
+        </div>
+    </body>
+    </html>
