--- a/src/app/notificaciones/notificaciones.component.html
+++ b/src/app/notificaciones/notificaciones.component.html
@@ -13,7 +13,7 @@
                     <p>{{reporte.fechaRegistro}}</p>
                     <p>{{reporte.usuario_reportado}}</p>
 
-                    <button (click)="setBloqueo()">Bloquear usuario</button>
+                    <!-- <button (click)="setBloqueo()">Bloquear usuario</button> -->
                     <button>Cancelar</button>
                 </div>
             </ng-container>
