--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Panel</title>
+</head>
+<body>
     <app-nav></app-nav>
 
     <div class="screen-container">
@@ -38,3 +46,5 @@
                 </div>
             </section>
         </div>
+    </body>
+    </html>
